# serializer version: 1
# name: test_get_device[device.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 100,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'name': 'LM1234',
      'pairable': True,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': None,
      'screensaver': dict({
        'enabled': False,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': True,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': datetime.time(1, 0, 39),
            'start_time': datetime.time(0, 0, 39),
          }),
          'when_dark': dict({
            'enabled': False,
          }),
        }),
        'widget': '08b8eac21074f8f7e5a29f2855ba8060',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.AUTO: 'auto'>,
    'model': 'LM 37X8',
    'name': "Frenck's LaMetric",
    'os_version': '2.2.2',
    'serial_number': 'SA110405124500W00BS9',
    'update': None,
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('192.168.1.11'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 21,
      'ssid': 'Frenck',
    }),
  })
# ---
# name: test_get_device[device2.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 100,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'name': 'LM1234',
      'pairable': True,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': None,
      'screensaver': dict({
        'enabled': False,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': True,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': datetime.time(1, 0, 39),
            'start_time': datetime.time(0, 0, 39),
          }),
          'when_dark': dict({
            'enabled': False,
          }),
        }),
        'widget': '08b8eac21074f8f7e5a29f2855ba8060',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.SCHEDULE: 'schedule'>,
    'model': 'LM 37X8',
    'name': "Frenck's LaMetric",
    'os_version': '2.2.2',
    'serial_number': 'SA110405124500W00BS9',
    'update': None,
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': None,
      'ip': IPv4Address('192.168.1.11'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': None,
      'ssid': 'Frenck',
    }),
  })
# ---
# name: test_get_device[device3.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 46,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': False,
      'address': '40:F4:C9:AA:AA:AA',
      'available': True,
      'discoverable': True,
      'name': 'LM8367',
      'pairable': False,
    }),
    'device_id': '67790',
    'display': dict({
      'brightness': 100,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.AUTO: 'auto'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': True,
      'screensaver': dict({
        'enabled': True,
        'modes': dict({
          'screen_off': None,
          'time_based': dict({
            'enabled': False,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': None,
            'start_time': None,
          }),
          'when_dark': dict({
            'enabled': True,
          }),
        }),
        'widget': '1_com.lametric.clock',
      }),
      'width': 37,
    }),
    'mode': <DeviceMode.MANUAL: 'manual'>,
    'model': 'sa8',
    'name': 'TIME',
    'os_version': '3.1.3',
    'serial_number': 'SASOMETHING',
    'update': dict({
      'version': '3.2.1',
    }),
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('192.168.0.33'),
      'mac': '40:F4:C9:AA:AA:AA',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 78,
      'ssid': 'NETGEARAA',
    }),
  })
# ---
# name: test_get_device[device_sky.json]
  dict({
    'audio': dict({
      'available': True,
      'volume': 100,
      'volume_limit': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'volume_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
    }),
    'bluetooth': dict({
      'active': True,
      'address': 'AA:BB:CC:DD:EE:FF',
      'available': True,
      'discoverable': True,
      'name': 'SKY0123',
      'pairable': False,
    }),
    'device_id': '12345',
    'display': dict({
      'brightness': 66,
      'brightness_limit': dict({
        'range_max': 100,
        'range_min': 2,
      }),
      'brightness_mode': <BrightnessMode.MANUAL: 'manual'>,
      'brightness_range': dict({
        'range_max': 100,
        'range_min': 0,
      }),
      'display_type': <DisplayType.MIXED: 'mixed'>,
      'height': 8,
      'on': True,
      'screensaver': dict({
        'enabled': True,
        'modes': dict({
          'screen_off': dict({
            'enabled': False,
          }),
          'time_based': dict({
            'enabled': False,
            'end_time': None,
            'local_end_time': None,
            'local_start_time': None,
            'start_time': None,
          }),
          'when_dark': None,
        }),
        'widget': '',
      }),
      'width': 64,
    }),
    'mode': <DeviceMode.MANUAL: 'manual'>,
    'model': 'sa5',
    'name': "spyfly's LaMetric SKY",
    'os_version': '3.0.13',
    'serial_number': 'SA52100000123TBNC',
    'update': dict({
      'version': '3.2.1',
    }),
    'wifi': dict({
      'active': True,
      'available': True,
      'encryption': 'WPA',
      'ip': IPv4Address('127.0.0.1'),
      'mac': 'AA:BB:CC:DD:EE:FF',
      'mode': <WifiMode.DHCP: 'dhcp'>,
      'netmask': '255.255.255.0',
      'rssi': 58,
      'ssid': 'IoT',
    }),
  })
# ---
